--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -4,4 +4,14 @@
 
 {% block content %}
     <h1>Homepage</h1>
+
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <p><a href="{% url 'logout' %}">Logout</a></p>
+    {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">Login</a> 
+        <a href="{% url 'signup' %}">Sign Up</a>   
+    {% endif %}
+
 {% endblock content %}
