--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -1,8 +1,8 @@
 {% extends '_base.html' %}
 
-{% block title %}About{% endblock title %}
+{% block title %}О нас{% endblock title %}
 
 {% block content %}
-    <h1>About Page</h1>
+    <h1>О нас</h1>
 {% endblock content %}
 
