--- a/pages/templates/account/login.html
+++ b/pages/templates/account/login.html
@@ -1,5 +1,7 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load staticfiles %}
+{% load socialaccount %}
 
 {% block title %}Login{% endblock title %}
 
